apps/envoy/envoy.yaml
static_resources:
  listeners:
    - name: http_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080

      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: grpc_json

                route_config:
                  name: routes
                  virtual_hosts:
                    - name: services
                      domains: ["*"]

                      cors:
                        allow_origin_string_match:
                          - exact: "http://localhost:5173"
                        allow_methods: "GET, POST, PUT, DELETE, OPTIONS, PATCH"
                        allow_headers: "content-type,authorization"
                        expose_headers: "grpc-status,grpc-message"
                        max_age: "86400"
                        allow_credentials: true

                      routes:
                        - match:
                            path: "/.well-known/jwks.json"
                          route:
                            cluster: auth_jwks

                        - match:
                            prefix: "/auth/"
                          route:
                            cluster: auth_grpc

                        - match:
                            prefix: "/api/"
                          route:
                            cluster: api_grpc

                        - match:
                            prefix: "/upload/"
                          route:
                            cluster: upload_grpc
                        - match:
                            prefix: "/media/"
                          route:
                            cluster: media_grpc

                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors

                  - name: envoy.filters.http.grpc_json_transcoder
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                      proto_descriptor: /etc/envoy/descriptor.pb
                      services:
                        - auth.authnpb.v1.AuthnService
                        - api.postpb.v1.PostService
                        - upload.uploadpb.v1.UploadService
                        - media.mediapb.v1.MediaService
                      match_incoming_request_route: true
                      convert_grpc_status: true
                      print_options:
                        always_print_primitive_fields: true

                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: auth_grpc
      connect_timeout: 1s
      type: logical_dns
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}
      load_assignment:
        cluster_name: auth_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: auth
                      port_value: 50051
    - name: auth_jwks
      connect_timeout: 1s
      type: logical_dns
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: auth_jwks
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: auth
                      port_value: 50151
    - name: api_grpc
      connect_timeout: 1s
      type: logical_dns
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}
      load_assignment:
        cluster_name: api_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: api
                      port_value: 50052
    - name: upload_grpc
      connect_timeout: 1s
      type: logical_dns
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}
      load_assignment:
        cluster_name: upload_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: upload
                      port_value: 50053
    - name: media_grpc
      connect_timeout: 1s
      type: logical_dns
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}
      load_assignment:
        cluster_name: media_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: media
                      port_value: 50054
